--- a/Veryl.toml
+++ b/Veryl.toml
@@ -15,3 +15,4 @@ target = { type = "directory", path = "target/veryl" }
 
 [test]
 waveform_target = { type = "directory", path = "target/waveform" }
+include_files = ["tb/test_cpu/test_dmem.hex", "tb/test_cpu/test_imem.hex"]
